Fix button text colour glitch in Dark Mode

--- a/src/assets/sass/modules/_buttons.scss
+++ b/src/assets/sass/modules/_buttons.scss
@@ -146,8 +146,6 @@ span.button {
     [type="submit"],
     a.button,
     span.button {
-        color: $color-text-button;
-
         &:focus {
             border-color: $dark-color-link-focus;
         }
